--- a/semana2/aula7-responsividade/index.html
+++ b/semana2/aula7-responsividade/index.html
@@ -13,10 +13,10 @@
                 <div id="div-colorida">
                     <div class="blue">1</div>
                     <div class="yellow">2</div>
-                    <div class="green">3</div>
+                    <div class="green" id="green1">3</div>
                     <div class="blue">4</div>
                     <div class="yellow">5</div>
-                    <div class="green">6</div>
+                    <div class="green" id="green2">6</div>
                 </div>
                 <div class="div-preta">
                     <div>7</div>
